- Refactor header and footer design. - Bugfix: collapse navbar after route has changed

--- a/src/app/ui/footer/footer.component.scss
+++ b/src/app/ui/footer/footer.component.scss
@@ -11,11 +11,9 @@
         border-top: 1px solid white;
         margin-top: 0 !important;        
         overflow: hidden;
-        background-image: url(/assets/images/alpen.jpeg);
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: center;
-        background-size: cover;
+        background-color: #00000077;
+        backdrop-filter: blur(3px);
+        -webkit-backdrop-filter: blur(3px);
         .navbar-expand {
             z-index: 1;
         }
@@ -25,18 +23,5 @@
         .fa {
             font-size: 1.5em;
         }
-    }
-    .navbar:after {
-        content: '';
-        width: calc(100% + 50px);
-        height: 87px;
-        background: inherit;
-        position: absolute;
-        left: -25px;
-        right: 0;
-        bottom: 0;
-        top: -25px;
-        box-shadow: inset 0 0 0 200px rgba(0,0,0,0.5);
-        filter: blur(20px);
     }
 }
